diesel_compile_tests/tests/fail/columns_cannot_be_rhs_of_insert.stderr
error[E0271]: type mismatch resolving `<() as AppearsInFromClause<users::table>>::Count == diesel::query_source::Once`
  --> $DIR/columns_cannot_be_rhs_of_insert.rs:20:10
   |
20 |         .execute(&mut conn)
   |          ^^^^^^^ expected struct `diesel::query_source::Never`, found struct `diesel::query_source::Once`
   |
   = note: required because of the requirements on the impl of `AppearsOnTable<()>` for `columns::hair_color`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `AppearsOnTable<()>` for `&columns::hair_color`
   = note: required because of the requirements on the impl of `InsertValues<users::table, _>` for `ColumnInsertValue<columns::name, &columns::hair_color>`
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `QueryFragment<_>` for `InsertStatement<users::table, ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>`
   = note: required because of the requirements on the impl of `ExecuteDsl<_, _>` for `InsertStatement<users::table, ValuesClause<ColumnInsertValue<columns::name, &columns::hair_color>, users::table>>`
